Added style to whriteroot

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,8 @@
+/*----------------------------------------------------------------------------------------------------------------------------------
+-----------------  MAIN SITE  ------------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------------------------------------------------------------*/
+
+
 header{
     background-image: url("./source/document1.jpg");
     background-color: #cccccc;
@@ -69,3 +74,45 @@ footer{
 .linkFooter {
     color: black;
 }
+
+.firstSiteH3{
+    font-size: 3rem;
+    text-align:center;
+}
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------
+-------------------  CREATE SITE  ---------------------------------------------------------------------------------------------------
+-----------------------------------------------------------------------------------------------------------------------------------*/
+
+.whriteH2{
+    font-size: 4rem;
+    text-align:center;
+}
+
+#root{
+    background-image: url("./source/headSiteImg.jpg");
+    background-color: #cccccc;
+    background-size: cover;
+    padding: 20px;
+/*    font-size:1.5rem;*/
+}
+
+.textResult{
+    background-color: white;
+    border-radius: 10px;
+    margin: 2px;
+
+}
+
+.textResult > p h1 h2 h3 h4 h5 {
+    margin: 5px;
+}
+
+
+
+
+
+/*----------------------------------------------------------------------------------------------------------------------------------
+------------------  SHOW NOTES SITE ------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------------------------------------------------------------*/
