--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,7 +4,7 @@
 
 
 header{
-    background-image: url("./source/document1.jpg");
+    background-image: url("./source/document3.jpg");
     background-color: #cccccc;
     background-size: cover;
 }
@@ -13,21 +13,19 @@ h1{
     font-size:6rem;
     margin: 0px; 
     padding: 40px;
-    -webkit-text-stroke-width: 4px;
-    -webkit-text-stroke-color: rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
 }
 
 #loginUser, #savenewUser, .userh3 {
     display: inline;
     padding: 15px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 #userContainer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: lightgrey;
+    background-color: rgb(234, 234, 234);
 }
 
 .userInput{
@@ -36,6 +34,7 @@ h1{
 
 nav{
     font-size: 2rem;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 ul{
@@ -47,7 +46,7 @@ li{
     list-style: none;
     display: inline-block; 
     padding: 10px;
-    background-color: lightgrey;
+    background-color: rgb(234, 234, 234);
     border-radius: 10px;
 }
 
@@ -58,6 +57,7 @@ li{
     background-size: cover;
     padding: 20px 150px;
     font-size:1.5rem;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 footer{
@@ -73,11 +73,13 @@ footer{
 /* visited link */
 .linkFooter {
     color: black;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .firstSiteH3{
     font-size: 3rem;
     text-align:center;
+    font-family:'Times New Roman', Times, serif;
 }
 
 
@@ -86,7 +88,7 @@ footer{
 -----------------------------------------------------------------------------------------------------------------------------------*/
 
 .whriteH2{
-    font-size: 4rem;
+    font-size: 3rem;
     text-align:center;
 }
 
@@ -105,14 +107,14 @@ footer{
 
 }
 
-.textResult > p h1 h2 h3 h4 h5 {
-    margin: 5px;
-}
-
-
-
 
 
 /*----------------------------------------------------------------------------------------------------------------------------------
 ------------------  SHOW NOTES SITE ------------------------------------------------------------------------------------------------
 ----------------------------------------------------------------------------------------------------------------------------------*/
+
+
+.ShowNotesH2{
+    font-size: 3rem;
+    text-align:center;
+}
