--- a/frontend/style.css
+++ b/frontend/style.css
@@ -139,5 +139,18 @@ footer{
 
 .ShowNotesH2{
     font-size: 3rem;
-    text-align:center;
+    text-align:center; 
 }
+
+.ShowNotesH3{
+    font-size: 1.6rem;
+    text-align:center; 
+    font-family:Arial, Helvetica, sans-serif;
+}
+.noteName{
+    background-color:white;
+    text-align:center;
+    font-size:3rem;
+
+}
+
