--- a/frontend/style.css
+++ b/frontend/style.css
@@ -134,11 +134,11 @@ footer{
 
 }
 
-.seeNoteInDOMBtn{
+.seeNoteInDOMBtn, .saveNoteBtn{
     font-size:1.5rem;
     margin:15px;
     position:relative;
-    left: 90vw;
+    left: 80vw;
     background-color:white;
     border-radius:10px;
     padding: 5px;
