--- a/frontend/style.css
+++ b/frontend/style.css
@@ -150,7 +150,7 @@ footer{
     margin-bottom: 40px;
 }
 
-.seeNoteInDOMBtn, .saveNoteBtn{
+.seeNoteInDOMBtn, .saveNoteBtn {
     font-size:1.5rem;
     margin:15px;
     position:relative;
@@ -160,6 +160,16 @@ footer{
     padding: 5px;
 }
 
+.saveNoteBtn {
+    background-color: rgb(193, 239, 193);
+}
+
+.deleteNoteBtn {
+    font-size:  1.5rem;
+    background-color:rgb(246, 215, 219);
+    border-radius:10px;
+    padding: 5px;
+}
 
 
 /*----------------------------------------------------------------------------------------------------------------------------------
